--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -1,6 +1,6 @@
 .task {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-between;
   padding: 1rem;
   background: var(--gray-500);
